# StreamingServer

./: .gitignore  Dockerfile
Client/: CMakeLists.txt  CMakeUserPresets.json  ClientConnectionContext.cpp  ClientConnectionContext.h  ClientHttp3.cpp  ClientHttp3.h  Encoder.cpp  Encoder.h  Http.h  QUICClient.cpp  QUICClient.h  StreamMap.h  WebCam.cpp  WebCam.h  main.cpp  vcpkg.json
Server/: CMakeLists.txt  CMakeUserPresets.json  ConnectionContext.cpp  ConnectionContext.h  ConnectionMap.h  CoroutineTask.h  QUICServer.cpp  QUICServer.h  ReceiverInterface.h  ServerConnectionContext.cpp  ServerConnectionContext.h  ServerHttp3.cpp  ServerHttp3.h  StreamMap.h  VideoEncoder.cpp  VideoEncoder.h  main.cpp  vcpkg.json
